# api_sillicon_store

./: .gitignore  README.md  Untitled.sql  backup.sql  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  script.sql  sillicon_store_dump.sql  tables.sql  visualize.json
api/: README.md  main.py
api/database/: connection.py
api/dependencies/: const.py  formatters.py  token.py
api/functions/: cart.py  person.py  product.py  token.py
api/models/: cart.py  models.py  order.py  product.py  seller.py  ship.py  voucher.py
api/requests/: cart.py  order.py  person.py  product.py  seller.py  ship.py
api/routers/: banner.py  brand.py  cart.py  category.py  comment.py  image.py  order.py  person.py  product.py  product_new.py  seller.py  ship.py  voucher.py
api/sql_app/: crud_person.py  database.py  models.py  schemas.py
api/sql_queries/: crud_person.py  crud_product.py
database/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  binlog.000029  binlog.index  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  (+1 more)
db_sillicon/: docker-compose.yml
tests/: request.py  tests.py
(+130 files in other folders)
