[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
starlette = "^0.37.2"
mysql-connector-python = "^8.4.0"
jwt = "^1.3.1"
bcrypt = "^4.1.3"

[tool.poetry.scripts]
start = "api.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
